[package]
name = "cronos-preview"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { features = ["serve-static"] }
tokio = { version = "1", features = ["macros"] }

[[bin]]
name = "cronos-preview001"
path = "src/main.rs"